--- a/src/SharpAudio.ALBinding/SharpAudio.ALBinding.csproj
+++ b/src/SharpAudio.ALBinding/SharpAudio.ALBinding.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="NativeLibraryLoader" Version="1.0.12" />
+    <PackageReference Update="Nerdbank.GitVersioning" Version="3.4.240" />
   </ItemGroup>
 
 </Project>
