--- a/src/SharpAudio/SharpAudio.csproj
+++ b/src/SharpAudio/SharpAudio.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
     <PackageReference Include="Vortice.MediaFoundation" Version="1.9.143" />
     <PackageReference Include="Vortice.XAudio2" Version="1.9.143" />
   </ItemGroup>
